--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -49,3 +49,14 @@ a, a:hover, a:focus {
   margin-right: 0;
 }
 
+.iframe {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.iframe-frame {
+  width: 100%;
+  height: 100%;
+}
