--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -55,9 +55,10 @@ a, a:hover, a:focus {
   right: 0;
   top: 0;
   bottom: 0;
+  -webkit-overflow-scrolling: touch;
+  overflow: auto;
 }
 .iframe-frame {
   width: 100%;
   height: 100%;
-  overflow: auto;
 }
